web/styles/project/_HomePage.scss
h2 {
    margin-bottom: 10px;
}

//.homepage-icon {
//    color: #d9d9d9;
//    font-size: 2em;
//    display: block;
//}


//.homepage-features {
//    margin-top: 50px;
//
//    > div {
//        text-align: center;
//        margin: 0 auto;
//
//        h5 {
//            font-weight: 500 !important;
//            font-size: 1rem;
//        }
//
//        p {
//            color: #22354a;
//            opacity: 0.85;
//            font-size: 15px;
//            font-family: 'Roboto', sans-serif;
//        }
//    }
//
//    ion {
//        color: #2cd6ca;
//    }
//}

.upcoming {
    margin-top: 20px;
    border-top: 1px rgba(34, 53, 74, 0.5) dashed;
    padding-top: 20px;

    & > p {
        width: 100%;
        text-align: center;
        margin-bottom: 10px;
    }
}

.signup-form {
    background-color: white;
    padding: 20px;
    border: none;
    margin: auto;
    margin-top: 55px;
    max-width: 540px;
    box-shadow: rgba(67, 90, 111, 0.3) 0px 0px 1px, rgba(67, 90, 111, 0.47) 0px 2px 4px -2px;
  
    .form-intro {
    }

	//ion{
	//	color:#2cd6ca;
	//	font-size: 3rem;
	//}
	h3{
		text-align: center;
	}
	//p {
	//	color: #fff;
	//}
	.form-group {
		text-align: left;
	}
}

.hero-cta {
    padding: 20px 0;

    .btn {
        @extend .btn;
        //width: 300px;
    }

    p {
        margin-top: 10px;
    }
}

.hero-brand {
    height: 46px;
    margin: 65px 0;
}

.feature-container {
    padding: $input-padding-y * 3;
}

.pricing {
    background: #f9f9f9;
    padding: 40px 0;
}

.video {
    margin-top: 2em;
}

.sign-up {
    background: #f1f1f1;
    padding-bottom: 15px;
}

footer.homepage {
    background: $hero-bg;
    color: white;
    padding: 50px;

    .brand-footer {
    }
    &__content {
        background-color: red;
    }
}

.footer {
    &__homepage-content {
        .icon {
            font-size: 2em;
        }
        .nav-list {
            padding-left: 0;
            li {
                padding-left: 0;
                a {
                    line-height: 30px;
                }
            }
        }
    }
}

.brand-ssg {
    width: 175px;
}

footer {
    .nav-list {
        margin: 0 0 50px;

        li {
            display: block;

        }
    }
    .service-status {
        padding-top: 1em;
        padding-bottom: 1em;
        &:hover, :focus {
            text-decoration: none;
        }
    }
    .dot {
        width: 8px;
        height: 8px;
        border-radius: 4px;
        margin-right: 20px;
        margin-bottom: 3px;
        display: inline-block;
        &.green {
            background-color: #35cac3;
        }
        &.orange {
            background-color: #fb9d43;
        }
        &.red {
            background-color: #f94f73;
        }
        &.purple {
            background-color: #a28af9;
        }
    }
}

.built-by {
    margin-top: 20px;
    p {
        color: #fff;
        font-weight: 100;
        font-size: 14px;
        opacity: 0.75;
    }
    img {
        height: 20px;
    }
}

.feedback-btn {
    position: fixed;
    z-index: 1001;
    right: 20px;
    bottom: 10px;
    .btn {
        border-radius: 20px;
    }
}

.img-fluid {
    max-width: 100%;
}

@media (max-width: 576px) {
    .app-store-badge {
        margin-right: 0 !important;
    }
    .play-badge {
        margin-left: 0 !important;
    }
}


@media (max-width: 576px) {

    .hero {
        display: block;
        margin-left: 0;
        margin-right: 0;

        h1 {
            margin-top: 20px;
        }
    }

    .hero-brand {
        display: none;
    }

    footer {
        .brand-footer {
            display: none;
        }
    }
    .feature-container {
        padding: 3em 0;
    }
}

